# ASCIIvidplayer

./: README.md
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
